crates/rust_scraper_mcp/tests/snapshots/selector_integration__matching_selector.snap
---
source: crates/rust_scraper_mcp/tests/selector_integration.rs
expression: pretty(json)
---
{
  "diagnostic": null,
  "results": [
    {
      "author": null,
      "content": "",
      "date": null,
      "excerpt": null,
      "title": "Article Title",
      "url": "https://example.com/"
    }
  ],
  "selector_applied": true,
  "selector_matched": true
}
