crates/rust_scraper_mcp/tests/snapshots/selector_integration__no_selector_backward_compat.snap
---
source: crates/rust_scraper_mcp/tests/selector_integration.rs
expression: pretty(json)
---
{
  "diagnostic": null,
  "results": [
    {
      "author": null,
      "content": "",
      "date": null,
      "excerpt": null,
      "title": "Default Page",
      "url": "https://example.com/"
    }
  ],
  "selector_applied": false,
  "selector_matched": true
}
